chore: clean code